--- a/app.json
+++ b/app.json
@@ -15,9 +15,14 @@
       "**/*"
     ],
     "ios": {
+      "permissions": {
+        "camera": true,
+        "mediaLibrary": true
+      },
       "supportsTablet": true
     },
     "android": {
+      "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
