--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-vector-icons": "^6.4.13",
+    "axios": "^1.4.0",
+    "axios-auth-refresh": "^3.3.6",
     "expo": "~48.0.18",
+    "expo-camera": "^13.2.1",
+    "expo-media-library": "^15.2.3",
+    "expo-secure-store": "^12.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-keychain": "^8.1.1",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
