--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-keychain": "^8.1.1",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
