--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^2.15.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
