--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-media-library": "^15.2.3",
     "expo-secure-store": "^12.1.1",
     "expo-status-bar": "~1.4.4",
+    "jsonwebtoken": "^9.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "~18.0.14",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
