--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "expo": "~48.0.18",
     "expo-camera": "^13.2.1",
     "expo-media-library": "^15.2.3",
+    "expo-permissions": "^14.1.1",
     "expo-secure-store": "^12.1.1",
     "expo-status-bar": "~1.4.4",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-keychain": "^8.1.1",
     "react-native-paper": "^5.8.0",
@@ -33,6 +37,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.4",
+    "rn-fetch-blob": "^0.12.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
