--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@babel/core": "^7.20.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "~18.0.14",
+    "@types/react-native": "0.63.40",
+    "@types/react-native-fs": "^2.13.0",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
